Fixed alignment of the swagger container

--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -310,6 +310,10 @@ ul > li > .nav-wrapper > .docs-nav__item__arrow {
   }
 }
 
+#docs-content {
+  width: 100%;
+}
+
 .docs-layout {
   table {
     line-height: 1.5;
